weird background flicker fix

--- a/css/style.sass
+++ b/css/style.sass
@@ -397,7 +397,7 @@ body
   position: absolute
   left: 0
   top: -15px
-  z-index: -1
+  z-index: 0
   background: #d8e7be
   opacity: 0.75
   -webkit-transition: opacity 0.6s
